crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__two_catch_clauses_lower_to_an_instanceof_chain_ending_in_a_rethrow.snap
---
source: crates/nvs-ir/src/lower/tests.rs
expression: "print_function(&f, map.file(file))"
---
fn <script>() -> tagged {
  bb0:
    safepoint
    ; stmt s0 @5:1-11:2
    ; stmt s1 @6:3-6:11
    v0 = class.desc T  ; classdesc
    v1 = call T::go(this: v0) ! bb3  ; void
    jump bb2
  bb1:
    v2 = take.thrown  ; object
    v3 = instanceof v2, LogicError  ; bool
    branch v3 -> bb6 (e0), bb7 (e1)
  bb2:
    v7 = const.null  ; null
    v8 = tag v7  ; tagged
    return v8
  bb3:
    catch -> bb4 else bb5
  bb4:
    jump bb1
  bb5:
    propagate "<script>() at t.nvs:6"
  bb6:
    ; stmt s2 @8:3-8:16
    v4 = const.str "logic"  ; string
    helper.echo_str v4 ! bb8
    release v4
    release v2
    jump bb2
  bb7:
    v5 = instanceof v2, IOError  ; bool
    branch v5 -> bb9 (e2), bb10 (e3)
  bb8:
    release v4
    release v2
    propagate "<script>() at t.nvs:8"
  bb9:
    ; stmt s3 @10:3-10:13
    v6 = const.str "io"  ; string
    helper.echo_str v6 ! bb11
    release v6
    release v2
    jump bb2
  bb10:
    throw v2 -> bb12
  bb11:
    release v6
    release v2
    propagate "<script>() at t.nvs:10"
  bb12:
    propagate "<script>() at t.nvs:10"
}
