crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__unsetting_an_element_through_an_int_key_still_renders_the_decimal.snap
---
source: crates/nvs-ir/src/lower/tests.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, array) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; array
    ; stmt s0 @4:5-4:18
    v2 = const.int 0  ; int
    v3 = helper.int_to_string v2 ! bb1  ; string
    v4 = array.unset v1, v3  ; array
    release v3
    release v4
    release v0
    return
  bb1:
    release v1
    release v0
    propagate "m() at t.nvs:4"
}
